<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.ibat.sloth.base.BaseFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="68dp"
            app:expandedTitleMarginStart="148dp"
            app:expandedTitleTextAppearance="@style/CollapsingToolbar_TextAppearance"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"

            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/banner2"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <xyz.ibat.sloth.view.widget.CircleImageView
                    android:id="@+id/user_head"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/icon_head" />
            </FrameLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                android:paddingTop="24dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="项目介绍:"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/project_introduction"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/font_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="感谢:"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:autoLink="all"
                android:text="@string/project_thanks"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/font_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="最后:"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:autoLink="all"
                android:text="@string/my_blog"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/font_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/my_gmail"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/font_14sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
